[package]
name = "dasblinkenping"
version = "0.2.0"
authors = ["Robbie Huffman <robbie.huffman@gmail.com>"]
edition = "2019"

[dependencies]
cidr = "0.1"
ctrlc = "3.1.1"
fastping-rs = "0.1.2"
futures = "0.1"
lazy_static = "1.3.0"
lsystem = "0.2.1"
oping = "0.3.3"
rand = "0.6.5"
regex = "1"
tokio = "0.1.16"
tokio-ping = "0.2.0"
termion = "1.5.1"

